# neko-configparser

./: .gitignore  pyproject.toml
neko_configparser/: __init__.py
neko_configparser/modules/: toml_parser.py  writer.py
neko_configparser/neko/: interfaces.py
